--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,7 @@
 /* Google Fonts */
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
-/* Global CSS Varialbes */
+/* Global CSS Variables */
 :root {
     --grey: #354A67;
     --light-grey: #466289;
@@ -32,7 +32,7 @@
 
 /* container  */
 .container{
-    width: 1200px;
+    width: 1100px;
     margin: 0 auto;
 }
  /* header section starts here  */
@@ -52,15 +52,18 @@
 }
 .navbar ul{
     display: flex;
-    gap: 30px;
+    gap:5px;
     align-items: center;
 }
 .navbar ul li a{
     color: var(--black);
+    padding: 8px 16px;
     font-family: var(--primary-ff);
+    border-radius: 5px;
 }
-.navbar ul li a:hover{
-    color: var(--blue);
+.navbar ul li a:hover,
+.navbar ul li a.active{
+    background-color:#ffff;
 }
 
 /* navbar buttons  */
@@ -110,4 +113,8 @@
 .dark-button:hover{
     color: var(--black);
     background-color: var(--white);
+}
+
+.responsive-menu-btn{
+    display: none;
 }
