Logo Height Issue  Resolved
logo height issue resolved by giving display flex to anchor

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -42,6 +42,12 @@
     align-items: center;
     justify-content: center;
 }
+
+/* logo section */
+.logo{
+    display: flex;
+}
+
 .logo img{
     width: 170px;
 }
